15) goahead: add wifisystem.ru profile in hotspot page.<br>
16) init.d: vpnserver: remove unneded second dgw to clients network (unused).<br>
17) kernel: ralink_raeth: switch to qdma for MT7621.<br>
18) kernel: ralink_raeth: raeth: fetch MT7621/MT7530 PauseFrame MIB counters.<br>
19) kernel: ralink_sdxc: fix MT7621 unstable write issue and cleanup.<br>
20) kernel: ralink_sdxc: set sample crc by clock falling edge.<br>
21) kernel: driver-core: move kobj_to_dev from genhd.h to device.h.<br>
22) kernel: driver-core: use kobj_to_dev instead of re-implementing it.<br>
23) kernel: crypto: skcipher - copy iv from desc even for 0-len walks.<br>
24) kernel: tty: fix GPF in flush_to_ldisc().<br>
25) kernel: mmc: upstream updates.<br>
26) kernel: err.h: add (missing) unlikely() to IS_ERR_OR_NULL().<br>
27) kernel: usb-storage: update unusual_devs from upstream.<br>
28) kernel: usb-storage: add quirk for mandatory READ_CAPACITY_16.<br>
29) kernel: usb_usual: fix US_FL_BROKEN_FUA flag before upstream commit 'usb: remove libusual', it masked by USB_US_ORIG_FLAGS.<br>
30) kernel: usb_usual: expand JMicron quirk US_FL_BROKEN_FUA to rev 1.17.<br>
31) kernel: net: core: revert net: fix__netdev_update_features return and add comment.<br>
32) kernel: net: core: 'ethtool' issue with querying phy settings.<br>
33) kernel: net: qmi_wwan: add WeTelecom-WPD600N.<br>
34) kernel: net: qmi_wwan: add SIMCom 7230E.<br>
35) kernel: net: cdc_ncm: avoid changing RX/TX buffers on MTU changes.<br>
36) kernel: net: add scheduling point in recvmmsg/sendmmsg.<br>
37) kernel: net: possible use after free in dst_release.<br>
38) kernel: net: bridge: use kobj_to_dev instead of to_dev.<br>
39) kernel: net: ipv6/addrlabel: fix ip6addrlbl_get().<br>
40) kernel: net: ipv6: honor ifindex in case we receive ll addresses in router advertisements.<br>
41) kernel: net: ipv6: update skb->csum when CE mark is propagated.<br>
<br>
<br>
<br>