@@ -1635,6 +1635,7 @@
 39) kernel: net: ipv6/addrlabel: fix ip6addrlbl_get().<br>
 40) kernel: net: ipv6: honor ifindex in case we receive ll addresses in router advertisements.<br>
 41) kernel: net: ipv6: update skb->csum when CE mark is propagated.<br>
+42) kernel: net: ipv6: always add flag an address that failed DAD with DADFAILED.<br>
 <br>
 <br>
 <br>
